--- a/src/templates/_user.html
+++ b/src/templates/_user.html
@@ -231,7 +231,7 @@
                             -
                         </td>
                         <td>
-                            <code class="pull-right">{{ result.SentRate.WeeklyUndelivered }}</code>
+                            <code class="pull-right">{{ result.SentRate.WeeklyIncoming }}</code>
                         </td>
                     </tr>
                     <tr>
