always show spam actions

--- a/src/templates/_user.html
+++ b/src/templates/_user.html
@@ -291,7 +291,7 @@
                     <div class="clearfix"></div>
                 </div>
                 <div class="list-group-item form-group text-center">
-                    <div class="col-sm-12" ng-if="flaggedPotentialSpammer(result.SentRate)">
+                    <div class="col-sm-12">
                         <form method="POST" class="text-center" ng-submit="checkSpam()">
                             <strong>Actions now allowed:</strong>
                             &nbsp;
