--- a/src/templates/_user.html
+++ b/src/templates/_user.html
@@ -90,11 +90,16 @@
                 <strong>Sent rate</strong>
             </div>
             <div class="list-group-item">
-                <strong>Reputation:</strong>
+                <strong title="Max sending limit per day" class="dotted">Reputation:</strong>
                 <code class="pull-right">{{ result.SentRate.Reputation }}</code>
             </div>
             <div class="list-group-item">
-                <strong>Trust:</strong>
+                <strong class="dotted" title="
+                [0]: default, new accounts. 
+                [1]: suspicious, address/displayname/subject matched suspicious words. 
+                [10]: set to this during each weekly reset, unless Trust is 100. 
+                [11]: sending subjects like 'new email address', boost Reputation. 
+                [100]: 'reset all' in admin panel toggles Trust between 100 and 0, 100 will override Suspicious Sender filter">Trust:</strong>
                 <code class="pull-right">{{ result.SentRate.Trust }}</code>
             </div>
             <div class="list-group-item">
@@ -102,8 +107,12 @@
                 <code class="pull-right">{{ result.SentRate.BannedNum }}</code>
             </div>
             <div class="list-group-item">
-                <strong>Ban time:</strong>
+                <strong>Outgoing Ban time:</strong>
                 <code class="pull-right">{{ result.SentRate.BanTime * 1000 | date:'medium' }}</code>
+            </div>
+            <div class="list-group-item">
+                <strong>Incoming Ban time:</strong>
+                <code class="pull-right">{{ result.SentRate.IncomingBan * 1000 | date:'medium' }}</code>
             </div>
             <div class="list-group-item">
                 <strong>Blackhole:</strong>
@@ -194,7 +203,7 @@
                     </tr>
                     <tr>
                         <td>
-                            <strong># Spam:</strong>
+                            <strong># Outgoing Spam:</strong>
                         </td>
                         <td>
                             -
@@ -204,6 +213,20 @@
                         </td>
                         <td>
                             <code class="pull-right">{{ result.SentRate.WeeklySpam }}</code>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>
+                            <strong># Incoming Spam:</strong>
+                        </td>
+                        <td>
+                            <code class="pull-right">{{ result.SentRate.HourlyIncoming }}</code>
+                        </td>
+                        <td>
+                            <code class="pull-right">{{ result.SentRate.DailyIncomingSpam }}</code>
+                        </td>
+                        <td>
+                            -
                         </td>
                     </tr>
                     <tr>
@@ -269,18 +292,14 @@
 
             <div class="list-group-item text-center">
                 <div class="list-group-item form-group text-center">
-                    <div class="col-sm-12 col-md-8">
+                    <div class="col-sm-12 col-md-6">
                         <form method="POST" class="text-center" ng-submit="resetUserSentRate()">
                             <input type="hidden" ng-init="accountID = result.User.ID" ng-model="accountID">
-                            <button type="submit" href class="btn btn-primary">
-                                <span class="fa fa-exclamation-triangle"></span> Reset sent rate
-                            </button>
-                            <label>
-                                <select ng-model="currentResetUserSentRateOption" class="form-control" ng-options="value.label for value in resetUserSentRateOptions"></select>
-                            </label>
+                            <select ng-model="currentResetUserSentRateOption" class="form-control pull-left" ng-options="value.label for value in resetUserSentRateOptions" style="width:14rem; margin-right:1rem;"></select>
+                            <button type="submit" href class="btn btn-primary pull-left">Go</button>
                         </form>
                     </div>
-                    <div class="col-sm-12 col-md-4">
+                    <div class="col-sm-12 col-md-6">
                         <form method="POST" class="text-center" ng-submit="resetUserReputation()">
                             <input type="hidden" ng-init="accountID = result.User.ID" ng-model="accountID">
                             <button type="submit" href class="btn btn-primary">
@@ -352,6 +371,10 @@
             <div class="list-group-item">
                 <strong>Display name:</strong>
                 <code class="pull-right">{{ result.User.DisplayName }}</code>
+            </div>
+            <div class="list-group-item">
+                <code class="pull-right">{{ result.User.Referral }}</code>
+                <strong>Referral</strong>
             </div>
             <div class="list-group-item form-inline">
                 <strong>Notification email:</strong>
