fixed wrong position of data

--- a/src/templates/_user.html
+++ b/src/templates/_user.html
@@ -220,7 +220,7 @@
                             <strong># Incoming Spam:</strong>
                         </td>
                         <td>
-                            <code class="pull-right">{{ result.SentRate.HourlyIncoming }}</code>
+                            -
                         </td>
                         <td>
                             <code class="pull-right">{{ result.SentRate.DailyIncomingSpam }}</code>
@@ -248,10 +248,10 @@
                             <strong># Incoming:</strong>
                         </td>
                         <td>
-                            -
+                            <code class="pull-right">{{ result.SentRate.HourlyIncoming }}</code>
                         </td>
                         <td>
-                            -
+                            <code class="pull-right">{{ result.SentRate.DailyIncoming }}</code>
                         </td>
                         <td>
                             <code class="pull-right">{{ result.SentRate.WeeklyIncoming }}</code>
